--- a/css/global/global.css
+++ b/css/global/global.css
@@ -1,12 +1,16 @@
 body {
   margin: 0px;
   font-family: Arial, Helvetica, sans-serif;
-  padding-bottom: 600px;
+  color: #111111;
 }
 
 h1,
-ul,
-p {
+h2,
+h3,
+h4 ul,
+p,
+blockquote,
+dd {
   margin: 0px;
 }
 
@@ -23,4 +27,8 @@ a {
 img {
   max-width: 100%;
   display: block;
+}
+
+img[src$=".jpg"] {
+  border-radius: 4px;
 }
