--- a/css/global/header.css
+++ b/css/global/header.css
@@ -1,5 +1,5 @@
 .header-bg {
-  background-color: #000000;
+  background-color: var(--cor-12);
 }
 
 .header {
@@ -8,11 +8,8 @@
   gap: 20px;
   justify-content: space-between;
   align-items: center;
-  box-sizing: border-box;
-  padding: 20px;
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .header-menu {
@@ -22,12 +19,8 @@
 }
 
 .header-menu a {
-  color: #ffffff;
   display: inline-block;
   padding: 16px 0px;
-  font-size: 18px;
-  font-family: "Poppins";
-  font-weight: 400;
   position: relative;
 }
 
@@ -36,7 +29,7 @@
   display: block;
   width: 0px;
   height: 2px;
-  background-color: #ffffff;
+  background-color: var(--cor-0);
   border-radius: 4px;
   margin-bottom: -4px;
   transition: 0.4s;
@@ -54,13 +47,13 @@
   }
 
   .header-menu a {
-    background-color: #111111;
+    background-color: var(--cor-11);
     padding: 12px 16px;
     border-radius: 4px;
   }
 
-  .header-menu a:hover {
-    background-color: #2e2e2e;
+  .header-menu a:hover::before {
+    display: none;
   }
 }
 
